# zig-fun

./: .gitignore  README.md
aoc/01-distance-between-two-sorted-lists/: 01-distance-between-two-sorted-lists.zig
projects/aoc/: README.md
projects/aoc/01-a-distance-between-two-sorted-lists/: 01-distance-between-two-sorted-lists.zig
projects/aoc/01-b-similarity-of-lists/: main.zig
projects/aoc/02-a-sequence-checker/: main.zig
projects/compiling-c/: README.md  build.zig  build.zig.zon
projects/compiling-c/cmake-4.0.1-tutorial-source/: README.txt
projects/compiling-c/cmake-4.0.1-tutorial-source/Step1/: CMakeLists.txt  TutorialConfig.h.in  build.zig  tutorial.cxx
projects/compiling-c/cmake-4.0.1-tutorial-source/Step2/: CMakeLists.txt  build.zig  tutorial.cxx
projects/compiling-c/helloworld/: build.zig  hello.c
projects/compiling-c/src/: main.zig
projects/leetcode/: 0001-two-sum-fourth-attempt.zig  0001-two-sum-second-attempt.zig  0001-two-sum-third-attempt.zig  0001-two-sum.zig  README.md
projects/misc/stdout/: locking-print.zig  main.zig
projects/misc/string-table-blog/: README.md  main.zig
projects/zig-book/ch05-debugging/: main.zig
projects/zig-book/ch06-points-and-optionals/: main.zig
projects/zig-book/ch08-unit-tests/: main.zig
projects/zig-book/ch11-data-structures/: main.zig
projects/zig-book/project-1/: README.md  main.zig
projects/zig-book/project-2-http-server/: README.md  build.zig  build.zig.zon
projects/zig-book/project-2-http-server/src/: config.zig  (+3 more)
projects/zig-book/project-3-stack/: build.zig  build.zig.zon  main.zig
(+15 files in other folders)
